[package]
name = "caliper"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
async-stream = "0.3"
futures-util = "0.3"
tower-http = { version = "0.5", features = ["trace"] }
serde.workspace = true
serde_json.workspace = true
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
anyhow.workspace = true
thiserror.workspace = true
clap.workspace = true
chrono.workspace = true
caliper-core.workspace = true
